--- a/app/globals.css
+++ b/app/globals.css
@@ -34,7 +34,7 @@ body {
   }
 
   .content-container {
-    @apply mx-auto w-full max-w-[2280px] px-5 xl:px-8;
+    @apply mx-auto w-full max-w-[2280px] px-5;
   }
 }
 
